[gd_scene load_steps=9 format=2]

[ext_resource path="res://elevator/elevator.gd" type="Script" id=1]
[ext_resource path="res://elevator/parts/room.tres" type="Texture" id=2]
[ext_resource path="res://elevator/door_bottom/door_bottom.tscn" type="PackedScene" id=3]
[ext_resource path="res://elevator/door_top/door_top.tscn" type="PackedScene" id=4]
[ext_resource path="res://elevator/panel.gd" type="Script" id=5]
[ext_resource path="res://light/working_light.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.75, 42.25 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -182, -218, 178, -219, 181, 223, -180, 222, -183, 68, -209, 69, -207, 250, 212, 249, 208, -248, -209, -246, -209, -63, -185, -63 )

[node name="Elevator" type="Node2D" groups=["elevator", "elevator_subscriber"]]
script = ExtResource( 1 )

[node name="WorkingLight" parent="." instance=ExtResource( 6 )]
shadow_enabled = true

[node name="Room" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="DoorBottom" parent="." instance=ExtResource( 3 )]
position = Vector2( -196, 69 )

[node name="DoorTop" parent="." instance=ExtResource( 4 )]
position = Vector2( -196, -202 )

[node name="Panel" type="Area2D" parent="."]
position = Vector2( -85, -150 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Panel"]
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[connection signal="panel_used" from="Panel" to="." method="_on_panel_used"]
